EXTRA_DIST = \
	bs2bconvert/bs2bconvert.vcproj \
	bs2bconvert/bs2bconvert-readme.txt \
	\
	bs2bstream/bs2bstream.vcproj \
	bs2bstream/bs2bstream-readme.txt \
	\
	examples/bs2b.bat \
	examples/bs2bwav.bat \
	examples/mp3bs2bmp3.bat \
	\
	sndfile/libsndfile-1.def \
	sndfile/libsndfile-1.dll \
	sndfile/libsndfile-1.lib \
	sndfile/libsndfile-license.txt \
	sndfile/readme.txt \
	sndfile/sndfile.h
